--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,9 +26,11 @@
 			<li><a class="dropdown-item" href="#">Bowlers</a></li>
           </ul>
         </li>
-		<li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/players/new">Add Player</a>
-        </li>
+	      <% if (user) { %>
+			<li class="nav-item">
+			  <a class="nav-link" aria-current="page" href="/players/new">Add Player</a>
+			</li>
+		   <% } %>
 		  <% if (user) { %>
 			  <li class="nav-item">
 				  <a class="nav-link" aria-current="page" href="/logout">Logout</a>
