--- a/views/players_show.ejs
+++ b/views/players_show.ejs
@@ -48,12 +48,14 @@
 				</tr>
 			  </tbody>
 			</table>
-			<a href="/players/<%= player._id %>/edit">
-				<button class="btn btn-outline-info btn-lg btn-block mb-2 w-100 p-0">Edit</button>
-			</a>
-			<form action = "/players/<%= player._id %>?_method=DELETE" method = "POST">
-				<button type="submit" class= "btn btn-outline-danger btn-lg btn-block w-100 p-0">Delete</button>
-			</form>
+			<% if (user && user.username === player.owner.username) { %>
+				<a href="/players/<%= player._id %>/edit">
+					<button class="btn btn-outline-info btn-lg btn-block mb-2 w-100 p-0">Edit</button>
+				</a>
+				<form action = "/players/<%= player._id %>?_method=DELETE" method = "POST">
+					<button type="submit" class= "btn btn-outline-danger btn-lg btn-block w-100 p-0">Delete</button>
+				</form>
+			<% } %>
 		</div>
 	</div>
 	<div class="row show_comment-header mt-3">
@@ -68,6 +70,7 @@
 				<%= comment.user.username %>
 			</div>
 			<div class="col-2 border-right my-auto d-flex flex-wrap justify-content-center">
+				<% if (user && user.username === comment.user.username) { %>
 				<a class="btn btn-sm btn-success w-75 p-0 my-1" href="/players/<%= player._id %>/comments/<%= comment._id%>/edit">
 					Edit
 				</a>
@@ -76,6 +79,7 @@
 						Delete
 					</button>
 				</form>
+				<% } %>
 			</div>
 			<div class="col-8 my-auto">
 				<%= comment.text %>
