update profiles links

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,14 +16,14 @@
             Profiles
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">WK-Batsman</a></li>
-            <li><a class="dropdown-item" href="#">All Format Player</a></li>
-            <li><a class="dropdown-item" href="#">T-20 Specialist</a></li>
-            <li><a class="dropdown-item" href="#">ODI specialist</a></li>
-			<li><a class="dropdown-item" href="#">Test specialist</a></li>
-            <li><a class="dropdown-item" href="#">All-rounders</a></li>
-            <li><a class="dropdown-item" href="#">Batsman</a></li>
-			<li><a class="dropdown-item" href="#">Bowlers</a></li>
+            <li><a class="dropdown-item" href="/players/profiles/all format player">All Format Player</a></li>
+            <li><a class="dropdown-item" href="/players/profiles/t-20 specialist">T-20 Specialist</a></li>
+            <li><a class="dropdown-item" href="/players/profiles/odi specialist">ODI specialist</a></li>
+			<li><a class="dropdown-item" href="/players/profiles/test specialsit">Test specialist</a></li>
+            <li><a class="dropdown-item" href="/players/profiles/wk-batsman">WK-Batsman</a></li>
+            <li><a class="dropdown-item" href="/players/profiles/all-rounders">All-rounders</a></li>
+            <li><a class="dropdown-item" href="/players/profiles/batsman">Batsman</a></li>
+			<li><a class="dropdown-item" href="/players/profiles/bowlers">Bowlers</a></li>
           </ul>
         </li>
 	      <% if (user) { %>
