--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -52,3 +52,17 @@
     </div>
   </div>
 </nav>
+<div class ="container mt-2">
+	<% if (successMessage && successMessage.length > 0) { %>
+			<div class="alert alert-success fade show" role="alert">
+				  <%= successMessage %>
+			 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+	<% } %>
+	<% if (errorMessage && errorMessage.length > 0) { %>
+			<div class="alert alert-warning fade show" role="alert">
+				  <%= errorMessage %>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+	<% } %>
+</div>
