--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -56,7 +56,8 @@
 	<% if (successMessage && successMessage.length > 0) { %>
 			<div class="alert alert-success fade show" role="alert">
 				  <%= successMessage %>
-			 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    			<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+			
 			</div>
 	<% } %>
 	<% if (errorMessage && errorMessage.length > 0) { %>
