--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -44,6 +44,9 @@
 			  </li>
 
 		  <% } %>
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="#">Trials</a>
+		  </li>
       </ul>
       <form class="d-flex" action="/players/search" method="GET">
         <input class="form-control me-2" type="search" placeholder="Search" name="term" aria-label="Search">
