--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,9 @@
 	width: 350px;
 }
 
+body {
+	background-color: rgb(236, 226, 183);
+}
 .card-img{
 	width: 100%;
 	height: 20rem;
@@ -17,10 +20,12 @@
 	font-size:1.8rem;
 }
 .card-text {
-	font-family: ''roboto', sans-serif;
+	font-family: 'roboto', 'sans-serif';
 	line-height: 1.4;
 }
-
+.main {
+	background-color: blue;
+}
 
 /* show_players */
 
