--- a/views/trials.ejs
+++ b/views/trials.ejs
@@ -1,11 +1,6 @@
 <%- include("partials/header") %>
-		<div class = "container">
-			<div class="row mt-2">
-			      <div class="card m-3">
-					  <p>this is testing for trialspage</p>
-						  
-			      </div>	
-			</div>
-			
-		</div>
+	<form>
+		<h1>field</h1>
+	</form>
+
 <%- include("partials/footer") %>
