--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -45,7 +45,7 @@
 
 		  <% } %>
 		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="#">Trials</a>
+			<a class="nav-link active" aria-current="page" href="/trials">Trials</a>
 		  </li>
       </ul>
       <form class="d-flex" action="/players/search" method="GET">
