--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -26,9 +26,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div id="displaysecs" style="text-align:center">
+	<div id="displaysecs" style="text-align:center; background-color: yellow;">
 		<h2>You will be redirected to the home page </h2>
-		<img src = "../../public/img/loading.gif" alt = "loading" style="width:100px;height:100px;">
+		<img src = "https://www.northeasttoday.in/assets/resources/2021/02/nvprsvg2sdj61.jpg" alt = "loading" style="width:100%;height:100%;">
 
 	
 </body>
