--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/players">Players</a>
         </li>
+		<li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/players/trials">Trials</a>
+		</li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Profiles
@@ -44,9 +47,6 @@
 			  </li>
 
 		  <% } %>
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/trials">Trials</a>
-		  </li>
       </ul>
       <form class="d-flex" action="/players/search" method="GET">
         <input class="form-control me-2" type="search" placeholder="Search" name="term" aria-label="Search">
